# calgebra

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TUTORIAL.md  pyproject.toml  pyrightconfig.json  sync_docs.sh
.github/: RELEASE.md
.github/workflows/: publish.yml  test.yml
calgebra/: __init__.py  cache.py  core.py  dataframe.py  gcal.py  gcsa.py  ical.py  interval.py  memory.py  metrics.py  properties.py  recurrence.py  symbolic.py  transform.py  util.py  windows.py
calgebra/docs/: API.md  GCAL.md  GCSA.md  QUICK-START.md  README.md  TUTORIAL.md
calgebra/mutable/: __init__.py  gcsa.py  memory.py
calgebra/skills/calgebra/: SKILL.md
calgebra/skills/gcal/: SKILL.md
docs/: API.md  GCSA.md  QUICK-START.md
tests/: test_cache.py  test_docs.py  test_gcal.py  test_gcsa.py  test_memory.py  test_memory_recurring.py  test_overlapping.py  test_recurrence.py  test_recurrence_fuzz.py  test_reverse.py  test_symbolic.py  test_timeline.py  test_transform.py  test_transform_unbounded.py  test_unbounded.py  test_windows.py
tests/mutable/: test_gcsa.py  test_memory.py  test_memory_metadata.py  test_memory_recurring.py  test_memory_recurring_params.py  test_recurrence_exceptions.py  test_remove_series.py  test_timeline.py
